src/components/menu/Menu.module.css
.menu {
    top: 0;
    width: 100%;
    height: 35px;
    position: fixed;
    z-index: 1;
    background: #519ee0;
    padding-top: 5px;
    padding-bottom: 5px;
    display: flex;
    align-items: center;
}

.overlay {
    position: fixed;
    z-index: 1;
    top: 45px;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, .75);
    opacity: 0;
    visibility: hidden;
    transition: all 0.2s linear;
}

.overlay.appear {
    visibility: visible;
    opacity: 1;
    transition: all 0.2s linear;
}

.mobileMenu {
    padding-left: 15px;
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.desktopMenu {
    padding-left: 15px;
}

.link {
    background: #1c37ad;
    color: #fff;
    border-radius: 5px;
    cursor: pointer;
    padding: 6px 10px;
    text-decoration: none;
}

.drawerLink {
    display: flex;
    align-items: center;
    background: #cecece;
    color: #fff;
    cursor: pointer;
    padding: 6px 10px;
    text-decoration: none;
    margin-bottom: 2px;
}

.drawerLink:hover {
    background: #bababa;
}

.icon {
    margin-right: 25px;
    cursor: pointer;
    font-size: 40px;
    margin-top: 3px;
    color: white;
}

.drawerIcon {
    font-size: 30px;
}

.drawerOpenIcon {
    margin-top: 5px;
}

.drawerIconPart {
    width: 30px;
    height: 5px;
    background-color: white;
    margin-bottom: 5px;
    margin-top: 5px;
}

.navigationDrawer {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
    width: 200px;
    top: 45px;
    bottom: 0;
    z-index: 1;
    background: #FFFFFF;
    transform: translateX(-100%);
    transition: transform 0.2s linear;
}

.navigationDrawer.appear {
    transform: translateX(0);
    transition: transform 0.2s linear;
}

.userDrawer {
    height: 100%;
    position: fixed;
    width: 200px;
    background: #FFFFFF;
    z-index: 1;
    top: 45px;
    right: 0;
    transform: translateX(100%);
    transition: transform 0.2s linear;
}

.userDrawer.appear {
    transform: translateX(0);
    transition: transform 0.2s linear;
}

.appear{}

